# polaris-oracle

./: Anchor.toml  README.md
programs/anchor/: Cargo.toml
programs/anchor/src/: constants.rs  error.rs  lib.rs
programs/anchor/src/instructions/: airdrop.rs  buy_ticket.rs  consume_ticket.rs  initialize.rs  mod.rs  pause_platform.rs  update_airdrop_requirement.rs  update_operator.rs  update_platform_state.rs  withdraw.rs
programs/anchor/src/states/: mod.rs  platform_state.rs  user_state.rs
programs/anchor/tests/: buy_ticket.rs  consume_ticket.rs  initialize.rs  test_initialize.rs
programs/anchor/tests/common/: mod.rs
programs/anchor/tests/fixtures/: admin-keypair.json  operator-keypair.json
